<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="55dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="vertical">

            <com.mooc.discover.view.StatusBarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvAllPlatForm"
                android:text="全部"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/home_selector_flowlayout_child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvUnion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_self_platform"
                android:textColor="@color/color_3"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mooc.resource.widget.flowLayout.AutoFlowLayout
                android:id="@+id/flUnion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvUnion"
                app:multiChecked="true" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_64e0"
                app:layout_constraintTop_toBottomOf="@+id/flUnion" />

            <TextView
                android:id="@+id/tvOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_other_platform"
                android:textColor="@color/color_3"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <com.mooc.resource.widget.flowLayout.AutoFlowLayout
                android:id="@+id/flOther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvOther"
                app:multiChecked="true" />
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="55dp"
        android:background="@color/color_64e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_radius2_stroke1_f2f2f2"
            android:gravity="center"
            android:text="@string/str_reset"
            android:textColor="@color/color_A9A3AB" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_radius2_solid_primary"
            android:gravity="center"
            android:text="@string/text_ok"
            android:textColor="@color/color_white" />
    </LinearLayout>
</FrameLayout>
